--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.4",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
